updated styles for blog article page

--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 </head>
 <body>
 	<header class="blue-background">
-		<h1>Carfection</h1>
+		<h1>Car Blogs</h1>
 		<p>Read before buy your next car</p>
 	</header>
 	<div id="navbar">
 		<a href="index.html">Home</a>
 		<a href="index.html">Featured Blog</a>
 		<a href="index.html">About</a>
-		<button id="subbutton">Subscribe</button>
+		<button id="subbutton" href="index.html">Subscribe</button>
 	</div>
 	<div id="bloglist">
-		<a href="">
+		<a href="pages/page.html">
 			<div class="blogcard">
-				<h2>The Truth of Mercedes-Benz</h2>
+				<h2>The Truth of Benz</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="">
+		<a href="pages/page.html">
 			<div class="blogcard">
 				<h2>The Truth of BMW</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -35,7 +35,7 @@
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="">
+		<a href="pages/page.html">
 			<div class="blogcard">
 				<h2>The Truth of Audi</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -44,9 +44,45 @@
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="">
+		<a href="pages/page.html">
 			<div class="blogcard">
 				<h2>The Truth of Lexus</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
+					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
+			</div>
+		</a>
+		<a href="pages/page.html">
+			<div class="blogcard">
+				<h2>The Truth of Toyota</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
+					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
+			</div>
+		</a>
+		<a href="pages/page.html">
+			<div class="blogcard">
+				<h2>The Truth of Mazda</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
+					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
+			</div>
+		</a>
+		<a href="pages/page.html">
+			<div class="blogcard">
+				<h2>The Truth of Hyundai</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
+					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
+					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
+			</div>
+		</a>
+		<a href="pages/page.html">
+			<div class="blogcard">
+				<h2>The Truth of Ford</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -57,9 +93,9 @@
 	<footer class="blue-background">
 		<p>Created by Jin Choe - Copyright 2021</p>
 		<div id="icon-set">
-			<img class="icon" src="images/facebook.png">
-			<img class="icon" src="images/linkedin.png">
-			<img class="icon" src="images/twitter.png">
+			<a href="#"><img class="icon" src="images/facebook.png"></a>
+			<a href="#"><img class="icon" src="images/linkedin.png"></a>
+			<a href="#"><img class="icon" src="images/twitter.png"></a>
 		</div>
 	</footer>
 </body>
