type: style & docs
Removed ID selector from CSS and updated README.md file

--- a/index.html
+++ b/index.html
@@ -7,82 +7,82 @@
 </head>
 <body>
 	<header class="blue-background">
-		<h1>Car Blogs</h1>
-		<p>Read before buy your next car</p>
+		<h1 class="page-title">The Ultimate Car Blog</h1>
+		<p class="page-summary">Read before buy your next car</p>
 	</header>
-	<div id="navbar">
+	<div class="navbar">
 		<a href="index.html">Home</a>
 		<a href="index.html">Featured Blog</a>
 		<a href="index.html">About</a>
-		<button id="subbutton" href="index.html">Subscribe</button>
+		<button class="sub-button" href="index.html">Subscribe</button>
 	</div>
-	<div id="bloglist">
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Benz</h2>
+	<div class="bloglist">
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Benz</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of BMW</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of BMW</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Audi</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Audi</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Lexus</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Lexus</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Toyota</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Toyota</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Mazda</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Mazda</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Hyundai</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Hyundai</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor</p>
 			</div>
 		</a>
-		<a href="pages/page.html">
-			<div class="blogcard">
-				<h2>The Truth of Ford</h2>
+		<a class="blog-card" href="pages/page.html">
+			<div class="card-content">
+				<h2 class="card-title">The Truth of Ford</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -92,10 +92,10 @@
 	</div>
 	<footer class="blue-background">
 		<p>Created by Jin Choe - Copyright 2021</p>
-		<div id="icon-set">
-			<a href="#"><img class="icon" src="images/facebook.png"></a>
-			<a href="#"><img class="icon" src="images/linkedin.png"></a>
-			<a href="#"><img class="icon" src="images/twitter.png"></a>
+		<div class="icon-set">
+			<a href="#"><img class="icon" src="images/facebook.png" alt="facebook-icon"></a>
+			<a href="#"><img class="icon" src="images/linkedin.png" alt="linkedin-icon"></a>
+			<a href="#"><img class="icon" src="images/twitter.png" alt="twitter-icon"></a>
 		</div>
 	</footer>
 </body>
