--- a/pages/page.html
+++ b/pages/page.html
@@ -6,29 +6,29 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<div id="navbar" class="blue-background">
+	<div class="navbar blue-background">
 		<a href="../index.html">
-			<img id="arrow-icon" class="icon" src="../images/arrow-left.png">	
+			<img class="arrow-icon icon" src="../images/arrow-left.png">	
 		</a>
-		<a href="../index.html">Back to Blog</a>
-		<div id="icon-set">
+		<a class="navbar-link" href="../index.html">Back to Blog</a>
+		<div class="icon-set">
 			<a href="#"><img class="icon" src="../images/facebook.png"></a>
 			<a href="#"><img class="icon" src="../images/linkedin.png"></a>
 			<a href="#"><img class="icon" src="../images/twitter.png"></a>
 		</div>
 	</div>
 	<article>
-		<section id="header">
-			<h1>Blog Title</h1>
-			<div id="author">
-				<img id="profile-image" src="../images/profile-image.png">
-				<div id="author-info">
+		<section class="header">
+			<h1 class="blog-title">Blog Title</h1>
+			<div class="author">
+				<img class="profile-image" src="../images/profile-image.png">
+				<div class="author-info">
 					<p>Author Name</p>
 					<p>Brief description about the author</p>
 				</div>
 			</div>
 		</section>
-		<section id="intro">
+		<section class="intro">
 			<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				Aenean porttitor tortor non neque interdum, quis tristique 
 				elit pulvinar. Donec fringilla</h2>
@@ -36,10 +36,10 @@
 				Aenean porttitor tortor non neque interdum.</p>
 		</section>
 		<figure>
-			<img src="../images/amg-gt.jpg">
-			<figcaption>2021 AMG-GT from Mercedes-Benz</figcaption>
+			<img class="figure-img" src="../images/amg-gt.jpg">
+			<figcaption class="figure-caption">2021 AMG-GT from Mercedes-Benz</figcaption>
 		</figure>
-		<section id="blog-body">
+		<section class="blog-body">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				 Aenean porttitor tortor non neque interdum, quis tristique 
 				 elit pulvinar. Donec fringilla</p>
@@ -69,10 +69,10 @@
 	</article>
 	<footer class="blue-background">
 		<p>Created by Jin Choe - Copyright 2021</p>
-		<div id="icon-set">
-			<a href="#"><img class="icon" src="../images/facebook.png"></a>
-			<a href="#"><img class="icon" src="../images/linkedin.png"></a>
-			<a href="#"><img class="icon" src="../images/twitter.png"></a>
+		<div class="icon-set">
+			<a href="#"><img class="icon" src="../images/facebook.png" alt="facebook-icon"></a>
+			<a href="#"><img class="icon" src="../images/linkedin.png" alt="linkedin-icon"></a>
+			<a href="#"><img class="icon" src="../images/twitter.png" alt="twitter-icon"></a>
 		</div>
 	</footer>
 </body>
