separated css files based on media queries and added image in blog card

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 		<p class="page-summary">Read before buy your next car</p>
 	</header>
 	<div class="navbar">
-		<a href="index.html">Home</a>
-		<a href="index.html">Featured Blog</a>
-		<a href="index.html">About</a>
+		<a class="home" href="index.html">Home</a>
+		<a class="featured" href="index.html">Featured Blog</a>
+		<a class="about" href="index.html">About</a>
 		<button class="sub-button" href="index.html">Subscribe</button>
 	</div>
 	<div class="bloglist">
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Benz</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -29,6 +30,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of BMW</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -38,6 +40,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Audi</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -47,6 +50,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Lexus</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -56,6 +60,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Toyota</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -65,6 +70,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Mazda</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -74,6 +80,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Hyundai</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -83,6 +90,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Ford</h2>
+				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -92,7 +100,7 @@
 	</div>
 	<footer class="blue-background">
 		<p>Created by Jin Choe - Copyright 2021</p>
-		<div class="icon-set">
+		<div class="footer-icon-set">
 			<a href="#"><img class="icon" src="images/facebook.png" alt="facebook-icon"></a>
 			<a href="#"><img class="icon" src="images/linkedin.png" alt="linkedin-icon"></a>
 			<a href="#"><img class="icon" src="images/twitter.png" alt="twitter-icon"></a>
