--- a/pages/page.html
+++ b/pages/page.html
@@ -40,16 +40,16 @@
 			<figcaption class="figure-caption">2021 AMG-GT from Mercedes-Benz</figcaption>
 		</figure>
 		<section class="blog-body">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				 Aenean porttitor tortor non neque interdum, quis tristique 
+			<p><em>Lorem ipsum</em> dolor sit amet, consectetur adipiscing elit. 
+				Aenean porttitor tortor non neque interdum, <b>quis tristique</b> 
 				 elit pulvinar. Donec fringilla</p>
 			<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				 Aenean porttitor tortor non neque interdum, quis tristique 
 				 elit pulvinar. Donec fringilla</h2>
-			<p>Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit.</strong> 
-				 Aenean porttitor tortor non neque interdum.</p>
+			<p>Lorem ipsum dolor sit amet, <b>consectetur adipiscing elit.</b> 
+				Aenean porttitor tortor <u>non neque interdum.</u></p>
 			<blockquote>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque 
+				<em>Lorem ipsum dolor</em> sit amet, consectetur adipiscing elit. Pellentesque 
 				id magna lacinia, lacinia arcu sed, condimentum nisl. Quisque pellentesque
 				tincidunt sapien at sollicitudin. Etiam non sem ut mi facilisis blandit.
 			</blockquote>
@@ -69,7 +69,7 @@
 	</article>
 	<footer class="blue-background">
 		<p>Created by Jin Choe - Copyright 2021</p>
-		<div class="icon-set">
+		<div class="footer-icon-set">
 			<a href="#"><img class="icon" src="../images/facebook.png" alt="facebook-icon"></a>
 			<a href="#"><img class="icon" src="../images/linkedin.png" alt="linkedin-icon"></a>
 			<a href="#"><img class="icon" src="../images/twitter.png" alt="twitter-icon"></a>
