renamed card iamge file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Benz</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -30,7 +30,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of BMW</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -40,7 +40,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Audi</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -50,7 +50,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Lexus</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -60,7 +60,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Toyota</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -70,7 +70,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Mazda</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -80,7 +80,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Hyundai</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
@@ -90,7 +90,7 @@
 		<a class="blog-card" href="pages/page.html">
 			<div class="card-content">
 				<h2 class="card-title">The Truth of Ford</h2>
-				<img class="card-image" src="images/benz-gtr.JPG" alt="benz-gtr">
+				<img class="card-image" src="images/benz-gtr.jpg" alt="benz-gtr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
 					orci non suscipit porttitor, lacus erat convallis felis, cursus tempor. Lorem 
 					ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque commodo, 
